feat: 1. 소비기록 업로드에 사용되는 카테고리 생성 및 삭제 컴포넌트 구현 2. input, button 디자인 구현

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,8 +19,10 @@ body {
 
 @layer components {
   .primary-btn {
-    @apply w-full bg-gray-500 text-white font-medium rounded-md 
-    text-center hover:bg-gray-400 
+    @apply w-full h-[44px] bg-[#C1E7F0] text-base font-medium rounded-full 
+    text-center hover:bg-[#C1E7F0]/80
+    border-1 border-[#7CBBDE]
+    cursor-pointer
     transition-colors;
   }
 }
